syntax = "proto3";

option go_package = "./postproto";

service PostService {
    rpc CreatePost (CreatePostRequest) returns (PostResponse);

    rpc GetPost (GetPostRequest) returns (GetPostResponse);

    rpc ListPosts (ListPostsRequest) returns (ListPostsResponse);

    rpc UpdatePost (UpdatePostRequest) returns (PostResponse);

    rpc DeletePost (DeletePostRequest) returns (DeletePostResponse);
}

message Post {
    string id = 1;
    string username = 2;
    string title = 3;
    string content = 4;        
    string created_at = 5;     
    string updated_at = 6;     
    repeated string tags = 7;  
}
message CreatePostRequest {
    string username = 1;         
    string title = 2;          
    string content = 3;       
    repeated string tags = 4;  
}
  

message GetPostRequest {
    string id = 1;             
}
  
message ListPostsRequest {      
    int32 page = 2;           
    int32 limit = 3;          
}

message UpdatePostRequest {
    string id = 1;              
    string title = 2;         
    string content = 3;        
    repeated string tags = 4;  
}

message DeletePostRequest {
    string id = 1;              
}
  

message PostResponse {
    string id = 1;
    string message = 2;
    string title = 3;
    string content = 4;
    repeated string tags = 5;
    string username = 6;
  }
message GetPostResponse {
    string id = 1;
    string username = 2; 
    string title = 3;
    string content = 4;
    repeated string tags = 5;
}

message ListPostsResponse {
    repeated GetPostResponse posts = 1;   
    int32 total = 2;           
    string message = 3;        
}
  
message DeletePostResponse {
    string message = 1;       
}